--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <section class="qurbani-now">
       <h1>
-        Let’s Finish your <br />
+        <span class="lets">Let’s </span> Finish your <br />
         internal Evilh
       </h1>
       <p>
