--- a/index.html
+++ b/index.html
@@ -156,15 +156,17 @@
       <img
         src="image/360_F_250150688_gIzc7I4IIwmlNGDijB5AFzoGddHXi3dE.jpg"
         alt=""
-        class="img3"
-      /><img
+        class="img-praying"
+      />
+      <img
         src="image/360_F_250150688_gIzc7I4IIwmlNGDijB5AFzoGddHXi3dE.jpg"
         alt=""
-        class="img3"
-      /><img
+        class="img-praying"
+      />
+      <img
         src="image/360_F_250150688_gIzc7I4IIwmlNGDijB5AFzoGddHXi3dE.jpg"
         alt=""
-        class="img3"
+        class="img-praying"
       />
     </section>
     <article class="note">
